Bug 124212 - Adjustment handle reacts wrongly, if custom shape has a non default viewBox
Summary: Adjustment handle reacts wrongly, if custom shape has a non default viewBox
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-19 18:33 UTC by Regina Henschel
Modified: 2019-04-06 21:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
custom shape with polar handle (12.89 KB, application/vnd.oasis.opendocument.text)
2019-03-19 18:33 UTC, Regina Henschel
Details
Custom shape with XY handle (12.54 KB, application/vnd.oasis.opendocument.text)
2019-03-19 18:34 UTC, Regina Henschel
Details
mirrored custom shape with XY handle (12.52 KB, application/vnd.oasis.opendocument.text)
2019-03-19 18:34 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-03-19 18:33:34 UTC
Created attachment 150105 [details]
custom shape with polar handle

Open the attached documents and follow the instruction.

If you click the adjustment handle to move it, the position will jump to a wrong place.
Comment 1 Regina Henschel 2019-03-19 18:34:14 UTC
Created attachment 150106 [details]
Custom shape with XY handle
Comment 2 Regina Henschel 2019-03-19 18:34:54 UTC
Created attachment 150107 [details]
mirrored custom shape with XY handle
Comment 3 Commit Notification 2019-03-21 14:43:35 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1ee8547003e50e212c00df1f8d2ec3f6fc50f819%5E%21

tdf#124212 make adjustment handle work always

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Regina Henschel 2019-04-06 21:14:13 UTC
Fix is available in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 35d9a2618dc0116378ab795a7b9277d248c5afd4
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-05_04:55:04
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded